Make sure the time is on it's own line on small screens
This sets the time block to define the layout of the comment meta
section, rather than the name. This makes no difference to normal
comments but gives us the desired layout for comments to councillors.

--- a/app/assets/stylesheets/partials/_comments.scss
+++ b/app/assets/stylesheets/partials/_comments.scss
@@ -89,15 +89,16 @@ ol#comments {
 }
 
 .comment-author {
+  display: inline-block;
+}
+
+.comment-time-block {
+  font-size: 0.9em;
   display: block;
 
   @include at-breakpoint(40em) {
     display: inline-block;
   }
-}
-
-.comment-time-block {
-  font-size: 0.9em;
 }
 
 .comment-actions {
